[package]
name = "hkid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
color-eyre = "0.6.2"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.17", features = ["blocking"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
